--- a/config/sharding.conf
+++ b/config/sharding.conf
@@ -9,8 +9,9 @@ query_files=./sql/test_queries.sql
 
 
 
-size_table_test=10000
+size_table_test=30000
 size_table_test_child_1=50000
 size_table_test_child_blob=100000
 size_table_test_child_multi_col=30000
 
+master_host=10.31.80.210
