Refactory and corrections

--- a/config/hosts.conf
+++ b/config/hosts.conf
@@ -1,10 +1,11 @@
 #host|port|user|passwd|db
-#10.31.80.203|5432|test|test|test
-#10.31.80.204|5432|test|test|test
-#10.31.80.205|5432|test|test|test
-#10.31.80.207|5432|test|test|test
-#10.31.80.208|5432|test|test|test
+10.31.80.203|5432|test|test|test
+10.31.80.204|5432|test|test|test
+10.31.80.205|5432|test|test|test
+10.31.80.207|5432|test|test|test
+10.31.80.208|5432|test|test|test
 #10.31.80.210|5432|test|test|test
+localhost|5432|test|test|test
 localhost|5432|test|test|test
 localhost|5432|test|test|test
 localhost|5432|test|test|test
